# College_Football

./: .env  .env.example  .gitignore  README.md  college_football.R  environment.yml
cfb/: README.md  pyproject.toml
cfb/pve/: __init__.py  calibration.py  excel_io.py  financial.py  ingest.py  optimizer.py  points_model.py  projection.py
cfb/scripts/: create_template.py  run_decision.py  train_engine.py
cfb/templates/: input_template.xlsx
