[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pve"
version = "0.1.0"
description = "Player Value Engine — buyer-side transfer portal decision tool"
requires-python = ">=3.11"
dependencies = [
    "cfbd",
    "python-dotenv",
    "pymc>=5",
    "arviz",
    "pandas",
    "numpy",
    "scipy",
    "openpyxl",
    "xlsxwriter",
    "PuLP",
]

[project.scripts]
train-engine = "scripts.train_engine:main"
run-decision = "scripts.run_decision:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pve*", "scripts*"]
